# algolib

./: CMakeLists.txt  README.md  compile  test
include/: find_and_union.h  for_each.h
tests/: find_and_union.cpp  for_each.cpp
